--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
 <style>
 	body { margin: 0; padding: 0; }
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+.responsive {
+  width: 100%;
+  height: auto;
+}
 </style>
 </head>
 <body>
 	
 <div id="menu"></div>
-<img src="MENU-WEB-LOW.png" />
+	
+ <img src="MENU-WEB-LOW.png" alt="menu" class="responsive" width="600" height="400"> 
+
+	
+	
 
 </body>
 </html>
