--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
 .responsive {
   width: 100%;
+  max-width: 400px;
   height: auto;
 }
 </style>
