--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>Menú</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-	body { margin: 0; padding: 0; }
-	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
 .responsive {
   width: 100%;
-  max-width: 400px;
   height: auto;
 }
 </style>
 </head>
 <body>
-	
-<div id="menu"></div>
+
 	
  <img src="MENU-WEB-LOW.png" alt="menu" class="responsive" width="600" height="400"> 
 
