--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	
- <img src="MENU-WEB-LOW.png" alt="menu" class="responsive" width="600" height="400"> 
+ <img src="MENU-WEB-LOW.png" alt="menu" class="responsive"> 
 
 	
 	
